<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/task01_content_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/temp_img"
            android:layout_width="@dimen/normal_500"
            android:layout_height="@dimen/normal_500"
            android:layout_marginTop="@dimen/normal_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/temp_img" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/temp_result"
            style="@style/TextAppearance.H2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_100"
            android:text="@string/temp_result_def"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/temp_img" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/place_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/normal_100"
            android:layout_marginTop="@dimen/normal_200"
            app:layout_constraintTop_toBottomOf="@+id/temp_result">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/place_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/place_edit_text_hint"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/check_temperature_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/normal_100"
            android:layout_marginTop="@dimen/normal_100"
            android:text="@string/check_temperature"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/place_text_input_layout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/normal_100"
            android:layout_marginTop="@dimen/normal_100"
            android:text="@string/back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/check_temperature_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
